AdBooker * Fixed some cosmetics on the layout page, bleeding buttons etc

--- a/ui/ab/_css/page_app_layout.css
+++ b/ui/ab/_css/page_app_layout.css
@@ -317,7 +317,7 @@ display: none;
 
 #rightsideOver  .footer {
 	position       : absolute;
-	bottom            : 42px;
+	bottom            : 0;
 	left           : 0;
 	right          : 0;
 	border-top  : 1px dotted #ccc;
